--- a/gams.css
+++ b/gams.css
@@ -23,8 +23,8 @@
 
 #character {
     width: 50px;
-    height: 43px;
-    background-image: url(./img/donut1.jpg);
+    height: 50px;
+    background-image: url(./img/donut1.png);
     background-repeat: no-repeat;
     position: absolute;
     bottom: 30px;
@@ -42,17 +42,33 @@
 .block {
     width: 40px;
     height: 36px;
-    background-image: url(img/rock1.jpg);
+    
     position: absolute;
     bottom: 30px;
     right: 0;
 }
+.block1{
+    background: url(img/rock1.png);
+}
+.block2{
+    background: url(img/rock2.png);
+}
+.block3{
+    background: url(img/rock3.png);
+}
 
-#result, #startbtndiv {
+#gameOver {
     position: absolute;
+    width: fit-content;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+}
+#btn {
+    position: absolute;
+    left: 50%;
+    top: 35%;
+    transform: translate(-50%, -35%);
 }
 
 #scoreheader {
