--- a/profile1.css
+++ b/profile1.css
@@ -451,7 +451,7 @@
                 transform: scale(1.2);
             }
             .profile-card .profile-img img{
-                width:100%;
+                width:90% !important;
                 height:auto;
                 transition: transform 1s;
             }
@@ -555,7 +555,264 @@
                 background-color: #fff;
             }
 
-            .blur {
-                filter: blur(5px);
-                pointer-events: none;
+            ::selection{
+                color: #fff;
+                background: #1a81ff;
+              }
+              .container2{
+                width: 500px;
+                height: 480px;
+                overflow: hidden;
+                background: #fff;
+                border-radius: 10px;
+                transition: height 0.2s ease;
+                box-shadow: 0 12px 28px rgba(0, 0, 0, 0.12);
+              }
+              .container2.active{
+                height: 590px;
+              }
+              .container2.wrapper{
+                width: 1000px;
+                display: flex;
+              }
+              .container2.wrapper section{
+                width: 500px;
+                background: #fff;
+              }
+              .container2 img{
+                cursor: pointer;
+              }
+              .container2 .post{
+                transition: margin-left 0.18s ease;
+              }
+              .container2.active .post{
+                margin-left: -500px;
+              }
+              .post header{
+                font-size: 22px;
+                font-weight: 600;
+                padding: 17px 0;
+                text-align: center;
+                border-bottom: 1px solid #bfbfbf;
+              }
+              .post form{
+                margin: 20px 25px;
+              }
+              .post form .content,
+              .audience .list li .column{
+                display: flex;
+                align-items: center;
+              }
+              .post form .content img{
+                cursor: default;
+                max-width: 52px;
+              }
+              .post form .content .details{
+                margin: -3px 0 0 12px;
+              }
+              .postForm .content .details p{
+                font-size: 17px;
+                font-weight: 500;
+              }
+              .content .details .privacy{
+                display: flex;
+                height: 25px;
+                cursor: pointer;
+                padding: 0 10px;
+                font-size: 11px;
+                margin-top: 3px;
+                border-radius: 5px;
+                align-items: center;
+                max-width: 98px;
+                background: #E4E6EB;
+                justify-content: space-between;
+              }
+              .details .privacy span{
+                font-size: 13px;
+                margin-top: 1px;
+                font-weight: 500;
+              }
+              .details .privacy i:last-child{
+                font-size: 13px;
+                margin-left: 1px;
+              }
+              .postForm :where(textarea, button){
+                width: 100%;
+                outline: none;
+                border: none;
+              }
+              .postForm textarea{
+                resize: none;
+                font-size: 18px;
+                margin-top: 30px;
+                min-height: 100px;
+              }
+              .postForm textarea::placeholder{
+                color: #858585;
+              }
+              .postForm textarea:focus::placeholder{
+                color: #b3b3b3;
+              }
+              .postForm :where(.theme-emoji, .options){
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+              }
+              .theme-emoji img:last-child{
+                max-width: 24px;
+              }
+              .postForm .options{
+                height: 57px;
+                margin: 15px 0;
+                padding: 0 15px;
+                border-radius: 7px;
+                border: 1px solid #B9B9B9;
+                box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+              }
+              .postForm .options :where(.list, li),
+              .audience :where(.arrow-back, .icon, li .radio){
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              }
+              .postForm .options p{
+                color: #595959;
+                font-size: 15px;
+                font-weight: 500;
+                cursor: default;
+              }
+              .postForm .options .list{
+                list-style: none;
+              }
+              .options .list li{
+                height: 42px;
+                width: 42px;
+                margin: 0 -1px;
+                cursor: pointer;
+                border-radius: 50%;
+              }
+              .options .list li:hover{
+                background: #f0f1f4;
+              }
+              .options .list li img{
+                width: 23px;
+              }
+              .postForm button{
+                height: 53px;
+                color: #fff;
+                font-size: 18px;
+                font-weight: 500;
+                cursor: pointer;
+                color: #BCC0C4;
+                cursor: no-drop;
+                border-radius: 7px;
+                background: #e2e5e9;
+                transition: all 0.3s ease;
+              }
+              .postForm textarea:valid ~ button{
+                color: #fff;
+                cursor: pointer;
+                background: #4599FF;
+              }
+              fo.postFormrm textarea:valid ~ button:hover{
+                background: #1a81ff;
+              }
+              .container2 .audience{
+                opacity: 0;
+                transition: opacity 0.12s ease;
+              }
+              .container2.active .audience{
+                opacity: 1;
+              }
+              .audience header{
+                padding: 17px 0;
+                text-align: center;
+                position: relative;
+                border-bottom: 1px solid #bfbfbf;
+              }
+              .audience header .arrow-back{
+                position: absolute;
+                left: 25px;
+                width: 35px;
+                height: 35px;
+                cursor: pointer;
+                font-size: 15px;
+                color: #747474;
+                border-radius: 50%;
+                background: #E4E6EB;
+              }
+              .audience header p{
+                font-size: 22px;
+                font-weight: 600;
+              }
+              .audience .content{
+                margin: 20px 25px 0;
+              }
+              .audience .content p{
+                font-size: 17px;
+                font-weight: 500;
+              }
+              .audience .content span{
+                font-size: 14px;
+                color: #65676B;
+              }
+              .audience .list{
+                margin: 15px 16px 20px;
+                list-style: none;
+              }
+              .audience .list li{
+                display: flex;
+                cursor: pointer;
+                margin-bottom: 5px;
+                padding: 12px 10px;
+                border-radius: 7px;
+                align-items: center;
+                justify-content: space-between;
+              }
+              .list li.active,
+              .audience .list li.active:hover{
+                background: #E5F1FF;
+              }
+              .audience .list li:hover{
+                background: #f0f1f4;
+              }
+              .audience .list li .column .icon{
+                height: 50px;
+                width: 50px;
+                color: #333;
+                font-size: 23px;
+                border-radius: 50%;
+                background: #E4E6EB;
+              }
+              .audience .list li.active .column .icon{
+                background: #cce4ff;
+              }
+              .audience .list li .column .details{
+                margin-left: 15px;
+              }
+              .list li .column .details p{
+                font-weight: 500;
+              }
+              .list li .column .details span{
+                font-size: 14px;
+                color: #65676B;
+              }
+              .list li .radio{
+                height: 20px;
+                width: 20px;
+                border-radius: 50%;
+                position: relative;
+                border: 1px solid #707070;
+              }
+              .list li.active .radio{
+                border: 2px solid #4599FF;
+              }
+              .list li .radio::before{
+                content: "";
+                width: 12px;
+                height: 12px;
+                border-radius: inherit;
+              }
+              .list li.active .radio::before{
+                background: #4599FF;
               }
