--- a/gams.css
+++ b/gams.css
@@ -2,7 +2,7 @@ html, body {
     height: 100%;
 }
 body {
-    background-image: url(img/1.png);
+    background-image: url(img/background1.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
