--- a/post.css
+++ b/post.css
@@ -340,7 +340,7 @@ main .container {
 
 
 
-
+/* Posts from users*/
 .post-content {
   background-color: #ffffff;
   border-radius: 8px;
@@ -388,18 +388,6 @@ main .container {
   background-size: 16px 16px;
 }
 
-.create-post-btn {
-  background-color: #007bff;
-  color: #fff;
-  padding: 8px 16px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.create-post-btn:hover {
-  background-color: #0056b3;
-}
 
 #addimg {
   background-color: #4caf50;
@@ -424,17 +412,14 @@ main .container {
   font-size: 14px;
   line-height: 1.5;
   color: #333;
+  
 }
 
 #createPost::placeholder {
   color: #999;
 }
 
-#createPost:focus {
-  outline: none;
-  border-color: #66afe9;
-  box-shadow: 0 0 5px rgba(102, 175, 233, 0.6);
-}
+
 
 body {
   background-image: url("");
@@ -486,3 +471,32 @@ body {
   font-size: 14px;
   color: #333;
 }
+
+#postForm {
+  margin-bottom: 20px; /* Add some spacing between the form and the btn-group */
+  
+}
+
+#emojis {
+  display: flex;
+  justify-content: space-between;
+}
+
+#emojisContainer {
+  background-color: white;
+  margin-left: 1px;
+  width: 500px;
+  display: flex;
+  justify-content: space-between;
+}
+
+#postFormContainer {
+  background-color: white;
+  margin-bottom: 20px;
+  
+}
+
+
+
+
+
