--- a/profile1.css
+++ b/profile1.css
@@ -35,10 +35,16 @@
         color: var(--color-dark) !important;
         background: var(--color-light) !important;
         overflow-x: hidden !important;
+        background-image: url('img/1.png') !important;
+        background-repeat: no-repeat !important;
+        background-size: cover !important;
+        height: 100vh !important;
+
+
     }
     
     .container {
-        width: 80% ;
+        width: 100% ;
         margin: 0 auto ;
       }
     
@@ -49,7 +55,7 @@
         overflow: hidden;
     }
     
-    img {
+    .img {
         display: block !important;
         width: 100% !important;
       }
@@ -436,15 +442,13 @@
         }
     }
 
-    body{
-        background:rgb(255, 244, 244);
-    }
+   
     .profile-card{
                 position:relative;
                 overflow: hidden;
-                margin-bottom:10px;
-                box-shadow:0px 2px 3px #222;
-                top:150px;
+                margin-bottom:10px !important;
+                box-shadow:0px 2px 3px #222 !important;
+                top:150px !important;
             }
             .profile-card:hover .profile-img img
             {
