--- a/login.css
+++ b/login.css
@@ -3,7 +3,7 @@
     --violet: #925E78;
     --purple: #BD93BD;
     --white: #F2EDEB;
-    --pink: #f096a1;
+    --pink: #F05365;
     --yellow: #FABC2A; 
 }
 
@@ -16,8 +16,8 @@
 .form {
   width: 300px;
   margin: auto;
-  margin-top: 125px;
-  background-color: var(--pink);
+  margin-top: 100px;
+  background-color:#EE9BAA;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -47,7 +47,7 @@
   width: 100%;
   padding: 10px 20px;
   align-self: center;
-  background:var(--purple);
+  background: var(--violet);
   border: none;
   border-radius: 5px;
   color: #fff;
@@ -56,7 +56,7 @@
 }
 
 #loginBtn:hover {
-  background: #196fe0;
+  background: #674254;
 }
 
 #forgotPassword {
@@ -67,7 +67,7 @@
   font-size: 13px;
   align-self: center;
   font-weight: bold;
-  color: #1877f2;
+  color: #04a2b6;
 }
 
 #forgotPassword::after {
@@ -77,7 +77,7 @@
   height: 0.5px;
   bottom: -25px;
   left: 0;
-  background: #dadde1;
+  background: #81c2e8;
 }
 
 #forgotPassword:hover {
@@ -89,7 +89,7 @@
   margin-bottom: 10px;
   padding: 15px 15px;
   align-self: center;
-  background: #42b72a;
+  background: var(--yellow);
   border: none;
   border-radius: 5px;
   color: #fff;
@@ -98,7 +98,7 @@
 }
 
 #createAccountBtn:hover {
-  background: #34a61d;
+  background: #cb9822;
 }
 .loader {
   border: 4px solid rgba(0, 0, 0, 0.1);
@@ -163,3 +163,26 @@
 justify-content: center;
 }
     
+.card{
+  width: 300px;
+  margin: auto;
+  margin-top: 100px;
+  background-color:#EE9BAA;
+  display: flex;
+  -ms-flex-align:start;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px 20px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  font-family: inherit;
+}
+
+p{
+  text-align: center;
+}
+
+h5{
+  text-align: center;
+  
+}
