images and post
added missing images and updated post page

--- a/post.css
+++ b/post.css
@@ -519,7 +519,7 @@ body {
 #emojisContainer {
   background-color: white;
   margin-left: 1px;
-  width: 500px;
+  width: 200px;
   display: flex;
   justify-content: space-between;
 }
@@ -543,7 +543,8 @@ body {
 button img {
   height: 35px;
   background-color: #ffffff;
-  
+  display: block;
+  width: 100%;
 }
 
 
@@ -558,3 +559,43 @@ button img {
   transform: scale(1.1);
 }
 
+
+/* tooltip affect */
+.postmebebe::before,
+.postmebebe::after{
+  --scale: 0;
+  position: absolute;
+  top: -5rem;
+  left: 50%;
+  transform: translateX(720%) translateY(696%) scale(var(--scale));
+  transition: 150ms transform;
+  transform-origin: bottom center;
+  
+
+
+}
+
+.postmebebe::before{
+  content: attr(data-tooltip);
+  color: white;
+  width: max-content;
+  max-width: 100%;
+  padding: .5rem;
+  border-radius: .3rem;
+  background: black;
+  text-align: center;
+  font-size: 9px;
+}
+
+.postmebebe:hover::before{
+  --scale: 1;
+
+
+}
+
+.postmebebe::after{
+  content:"";
+  background-color: #333;
+  border: 10px solid transparent;
+  border-top: black;
+}
